force-app/main/default/objects/Allegation__c/Allegation__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Allegation</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Allegation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>