force-app/main/default/objects/Allegation__c/fields/AllegationType__c.field-meta.xml
<CustomField>
    <fullName>AllegationType__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>Allegation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affinity Fraud</fullName>
            </value>
            <value>
                <fullName>Charging Unreasonable Advisory Fees</fullName>
            </value>
            <value>
                <fullName>Charging unreasonable commissions/compensation</fullName>
            </value>
            <value>
                <fullName>Commingling or Hypothecation of Clients&apos; Funds or Securities</fullName>
            </value>
            <value>
                <fullName>Conversion/Theft</fullName>
            </value>
            <value>
                <fullName>Convicted of any felony/misdemeanor</fullName>
            </value>
            <value>
                <fullName>Dealing in Unregistered Securities</fullName>
            </value>
            <value>
                <fullName>Dealing with Unregistered Persons</fullName>
            </value>
            <value>
                <fullName>Deceptive or misleading advertising</fullName>
            </value>
            <value>
                <fullName>E2 Visa Fraud</fullName>
            </value>
            <value>
                <fullName>EB-5 Visa Fraud</fullName>
            </value>
            <value>
                <fullName>Enjoined by Court</fullName>
            </value>
            <value>
                <fullName>Entering Into Unwritten Investment Advisory Contracts</fullName>
            </value>
            <value>
                <fullName>Failure/delay to file financial statements/reports</fullName>
            </value>
            <value>
                <fullName>Failure/Refusal to Furnish a Customer with Information to Which They are Entitled</fullName>
            </value>
            <value>
                <fullName>Failure to Comply with Statute and/or Rules</fullName>
            </value>
            <value>
                <fullName>Failure to cooperate with investigation</fullName>
            </value>
            <value>
                <fullName>Failure to Disclose</fullName>
            </value>
            <value>
                <fullName>Failure to disclose commission/compensation</fullName>
            </value>
            <value>
                <fullName>Failure to disclose dual agency</fullName>
            </value>
            <value>
                <fullName>Failure to Maintain Book and Records</fullName>
            </value>
            <value>
                <fullName>Failure to Meet Net Capital Requirements</fullName>
            </value>
            <value>
                <fullName>Failure to obtain insurance or bond</fullName>
            </value>
            <value>
                <fullName>Failure to provide an FDD</fullName>
            </value>
            <value>
                <fullName>Failure to provide Disclosure Statement (IA)</fullName>
            </value>
            <value>
                <fullName>Failure to provide invoices</fullName>
            </value>
            <value>
                <fullName>Failure to Provide Prospectus</fullName>
            </value>
            <value>
                <fullName>Failure to Supervise</fullName>
            </value>
            <value>
                <fullName>Fictitious Accounts</fullName>
            </value>
            <value>
                <fullName>Forgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>