force-app/main/default/objects/Allegation__c/fields/SEBCaseContact__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC102918 - Created for BREG phase 1</description>
    <label>SEB Case Contact</label>
    <referenceTo>SEBCaseContact__c</referenceTo>
    <relationshipLabel>Allegations</relationshipLabel>
    <relationshipName>Allegations</relationshipName>
    <type>Lookup</type>
</CustomField>