force-app/main/default/objects/Allegation__c/fields/SEBCaseID__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseID__c</fullName>
    <description>PacPoint-IC102218 - Created for BREG phase 1</description>
    <label>SEB Case ID</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipLabel>Allegations</relationshipLabel>
    <relationshipName>Allegations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>