force-app/main/default/objects/Allegation__c/fields/Total_of_Allegation_Violations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Allegation_Violations__c</fullName>
    <description>Counts the total related Allegation Violation records.</description>
    <label>Total # of Allegation Violations</label>
    <summaryForeignKey>AllegationViolation__c.Allegation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>